[package]
name = "syslog-server"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <youremail@example.com>"]
description = "A production-grade SysLog server implementation in Rust using rsyslog"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
chrono = "0.4"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12" }
syslog = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true